<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="rajawalisharedprefs"
    android:title="@string/settings_title" >
   
    <PreferenceScreen
        android:key="point"
        android:title="@string/point_light"
        android:persistent="false">
	    <CheckBoxPreference
	        android:key="point_light_on"
	        android:title="@string/turn_on"
	        android:defaultValue="true" />
	    <EditTextPreference android:key="point_light_power" android:title="Power" android:defaultValue="100"/>    
    </PreferenceScreen>


    <PreferenceScreen
        android:key="spot"
        android:title="@string/spot_light"
        android:persistent="false">
	    <CheckBoxPreference
	        android:key="spot_light_on"
	        android:title="@string/turn_on"
	        android:defaultValue="true" />
	    <EditTextPreference android:key="spot_light_power" android:title="@string/intensity" android:defaultValue="100"/>
	    <EditTextPreference android:title="@string/coneAngle" android:key="spot_light_cone" android:defaultValue="60"/>
     </PreferenceScreen>


    <PreferenceScreen
        android:key="direct"
        android:title="@string/direct_light"
        android:persistent="false">
	    <CheckBoxPreference
	        android:key="direct_light_on"
	        android:title="@string/turn_on"
	        android:defaultValue="true" />
	    <EditTextPreference android:key="direct_light_power" android:title="@string/intensity" android:defaultValue="100"/>
    </PreferenceScreen>
</PreferenceScreen>